Added game state overlay messages
Added game message font import to CSS
Added game state messages to gamestate.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/*Font used for game messages*/
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 body, html {
     height: 100vh;
 }
