--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,44 @@
 /*Font used for game messages*/
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
+/*Makes the page full browser height*/
 body, html {
     height: 100vh;
 }
-
 body {
   min-width: 600px;
 }
-
+/*Game canvas should take up full width with no gaps*/
 #pageWrapper {
   padding-left: 0;
   padding-right: 0;
 }
-
 .row {
   margin: 0;
 }
 
+/*
+ * Header styles
+ */
+/*Header gets 5% of the screen, game 95%*/
 .headerWrapper {
   height: 5vh;
 }
-
+/*
+ * Menu Styles
+ */
+/*
+ * Game Splashscreen styles
+ */
+/*
+ * Game page and canvas styles
+ */
 .gameWrapper {
   padding-left: 0;
   padding-right: 0;
   height: 95vh;
 }
-
+/*Ensures game canvas takes full height*/
 #gameCanvas {
   width: 100%;
   height: 100%;
