Initial header navbar and splash screen layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,14 @@ body {
 /*
  * Menu Styles
  */
+.navWrapper {
+  position: absolute;
+  z-index: 999;
+}
 /*
  * Game Splashscreen styles
  */
+
 /*
  * Game page and canvas styles
  */
