--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,9 @@ h1.splashtext {
   padding-bottom: 2px;
   border-bottom: 1px solid white;
 }
+.splashseparator {
+  border-top: 1px solid white;
+}
 .btn-group.btn-group-toggle .btn {
   width: 75px;
 }
