--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,8 +140,18 @@ h1.splashtext {
   width: 100%;
   height: 100%;
 }
-
-#joyDiv {
+#touchControls {
+  /*Set above other elements*/
   position: absolute;
-  top: 150px;
+  z-index: 1;
+  /*Position on the right hand side half way down the screen*/
+  top: 50%;
+  left: 100%;
+  transform: translate(-110%, -50%);
+
+  width: 15em;
+  height: 15em;
+}
+.touch-icon {
+  fill: rgba(255,255,255,0.5);
 }
